Add OS X config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,4 +2,7 @@
 - link:
     ~/Library/LaunchAgents/MuteVolumeAtNight.plist:
       path: launchagents/MuteVolumeAtNight.plist
-- shell: []
+- shell:
+    -
+      - "./shell/osx.sh"
+      - "OSX Configuration"
