--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,6 +2,10 @@
 - link:
     ~/.aliases:
       path: aliases
+    ~/.bashrc:
+      path: bashrc
+    ~/.profile:
+      path: profile
     ~/Library/LaunchAgents/MuteVolumeAtNight.plist:
       path: launchagents/MuteVolumeAtNight.plist
 - shell:
