--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,6 +2,8 @@
 - link:
     ~/.aliases:
       path: aliases
+    ~/.bash_prompt:
+      path: bash_prompt
     ~/.bashrc:
       path: bashrc
     ~/.dotfiles:
