--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,8 @@
       path: ""
     ~/.profile:
       path: profile
+    ~/Library/LaunchAgents/GoodMorning.plist:
+      path: launchagents/GoodMorning.plist
     ~/Library/LaunchAgents/MuteVolumeAtNight.plist:
       path: launchagents/MuteVolumeAtNight.plist
     ~/Library/Services/Rename To Title Case.workflow:
