--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,26 +3,15 @@
       relink: true
 - clean: ['~']
 - link:
-    ~/.aliases:
-      path: aliases
-    ~/.bash_prompt:
-      path: bash_prompt
-    ~/.bashrc:
-      path: bashrc
-    ~/.dotfiles:
-      path: ""
-    ~/.profile:
-      path: profile
-    ~/.pylintrc:
-      path: pylintrc
-    ~/Library/LaunchAgents/GoodMorning.plist:
-      path: launchagents/GoodMorning.plist
-    ~/Library/LaunchAgents/MuteVolumeAtNight.plist:
-      path: launchagents/MuteVolumeAtNight.plist
-    ~/Library/LaunchAgents/SortDownloads.plist:
-      path: launchagents/SortDownloads.plist
-    ~/Library/Services/Rename To Title Case.workflow:
-      path: services/Rename To Title Case.workflow
+    ~/.aliases: aliases
+    ~/.bash_prompt: bash_prompt
+    ~/.bashrc: bashrc
+    ~/.dotfiles: ""
+    ~/.profile: profile
+    ~/.pylintrc: pylintrc
+    ~/Library/LaunchAgents/GoodMorning.plist: launchagents/GoodMorning.plist
+    ~/Library/LaunchAgents/MuteVolumeAtNight.plist: launchagents/MuteVolumeAtNight.plist
+    ~/Library/Services/Rename To Title Case.workflow: services/Rename To Title Case.workflow
 - shell:
     -
       - "./shell/osx.sh"
